# ai-content-creation

./: .dockerignore  .gitignore  CLEANUP_GUIDE.md  CREATIVE_EXPERT_REVIEW.md  Dockerfile.api  PROJECT_OVERVIEW.md  README.md  SEO_ENHANCEMENTS_SUMMARY.md  debug_logging.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  instructions.md  ngrok.yml  package-lock.json  pyproject.toml  redis.conf  requirements-dev.txt  requirements.txt  sample.env  sql_cleanup.py  start-ngrok-foreground.sh  start-ngrok-with-logs.sh  start-ngrok.sh  stop-services.sh
churns/: test_refinement_quick.py  test_refinement_simple.py
churns/api/: background_tasks.py  database.py  dependencies.py  lifespan.py  main.py  routers.py  schemas.py  websocket.py
churns/configs/: stage_order.yml
churns/core/: __init__.py  aspect_ratio_utils.py  brand_kit_utils.py  client_config.py  constants.py  input_normalizer.py  json_parser.py  metrics.py  model_selector.py  token_cost_manager.py  user_config.py
churns/models/: __init__.py  presets.py
churns/pipeline/: context.py  executor.py  preset_loader.py
churns/stages/: __init__.py  caption.py  creative_expert.py  image_assessment.py  image_eval.py  image_generation.py  image_processing_agent.py  load_base_image.py  prompt_assembly.py  prompt_refine.py  refinement_utils.py  save_outputs.py  strategy.py  style_adaptation.py  style_guide.py  subject_repair.py  text_repair.py
churns/tests/: run_brand_kit_tests.py  test_aspect_ratio_consistency.py  test_aspect_ratio_utils.py  test_brand_kit_e2e_workflows.py  test_brand_kit_integration.py  test_brand_presets_api.py  test_brand_presets_e2e.py  test_caption_api.py  test_caption_stage.py  test_creative_expert_stage.py  test_full_pipeline_integration.py  test_gemini_image_generation.py  test_general_migration.py  test_image_assessment_integration.py  test_image_assessment_parallelism.py  test_image_assessment_stage.py  test_image_generation_integration.py  test_image_generation_scenarios.py  test_image_generation_stage.py  test_json_parser.py  test_language_control.py  test_pipeline_preset_integration.py  test_prompt_assembly_refactor.py  test_prompt_assembly_stage.py  test_prompt_refinement.py  test_refinement_simple.py  (+8 more)
docs/: caption_feature.md  captioning_feature_plan.md  docker-optimization.md  image_refinement_plan.md  improvements.md
front_end/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.jest.json  tsconfig.json
scripts/: benchmark_caption_models.py  build-optimized.ps1  build-optimized.sh  caption_benchmark_results_fb.json  caption_benchmark_results_fb_7.json  caption_benchmark_results_fb_7_zh.json  caption_benchmark_results_ig.json  caption_benchmark_results_ig_1_zh.json  caption_benchmark_results_ig_7.json  caption_benchmark_results_xhs.json  caption_benchmark_results_xhs_1_zh.json  caption_benchmark_results_xhs_7.json  create_brand_presets_table.py
tests/: test_caption_integration.py  test_caption_task_type.py
(+126 files in other folders)
